--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,7 @@
 body {
     background-color: rgb(228, 198, 198);
 
-    width: 100%;
-    height: 0%;
-    margin: 0;
-    padding: 0;
+    width: 1440px;
     border: none;
     /* overflow-x: hidden;
     Para ocultar la barra de desplazamiento horizontal */
@@ -93,4 +90,35 @@ nav ul li a:hover {
     /* Centra la imagen horizontal y verticalmente */
     position: relative;
     /* Establece el contexto de posicionamiento */
+}
+
+.seccion1 {
+    background-color: #502110;
+    width: 1440px;
+    position: relative; /* Establece el contexto de posicionamiento */
+    height: 799px; /* Altura del contenedor */
+}
+
+
+
+ 
+.img-page {
+    position: absolute; /* Posiciona las imágenes de forma absoluta */
+    top: 0; /* Posición desde la parte superior */
+    left: 0; /* Posición desde la parte izquierda */
+    z-index: 1; /* Capa más baja */
+}
+ 
+.img-bolso {
+    position: absolute; /* Posiciona las imágenes de forma absoluta */
+    top: 50px; /* Posición desde la parte superior */
+    left: 250px; /* Posición desde la parte izquierda */
+    z-index: 2; /* Capa intermedia */
+}
+ 
+.img-tittle {
+    position: absolute; /* Posiciona las imágenes de forma absoluta */
+    top: 350px; /* Posición desde la parte superior */
+    left: 400px; /* Posición desde la parte izquierda */
+    z-index: 3; /* Capa más alta */
 }
