--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,21 @@
 body {
-    background-color: rgb(228, 198, 198);
-
-    width: 1440px;
     border: none;
-    /* overflow-x: hidden;
-    Para ocultar la barra de desplazamiento horizontal */
+    text-align: center;
 }
 
-header {
+main{
+    text-align: center; 
+    padding-left: 20%;
+}
+
+nav {
+    display: inline-block;
+    /* Permite centrar horizontalmente */
+}
+
+.headerPpal {
+    width: 59%;
+    margin-left: 20%;
     background-color: #502110;
     /* Agrega imagen de fondo */
     background-size: cover;
@@ -20,14 +28,6 @@ header {
     /* Centrar contenido horizontalmente */
     border-bottom: 2px solid #A67B5B;
     /* Borde inferior de 2px de grosor y color oscuro */
-
-}
-
-
-
-nav {
-    display: inline-block;
-    /* Permite centrar horizontalmente */
 }
 
 .logo {
@@ -41,8 +41,8 @@ nav {
 .logoshop {
     float: right;
     /* Posiciona la imagen absolutamente */
-    margin-right: 40px
-        /* Espacio entre la imagen y el borde derecho de la pagina*/
+    margin-right: 40px;
+        /* Espacio entre la imagen y el borde derecho de la pagina*/   
 }
 
 .logoname {
@@ -51,7 +51,6 @@ nav {
     margin-right: 20px;
     /* Espacio entre la imagen y la lista de navegación */
 }
-
 
 nav ul {
     list-style: none;
@@ -81,83 +80,129 @@ nav ul li a:hover {
     /* Subraya el enlace al pasar el ratón */
 }
 
-.sectionprincipal {
-    background-image: url('./assets/images/Rectangle\ \(1\).png');
-    /* Agrega imagen de fondo */
-    background-size: cover;
-    /* Ajusta el tamaño de la imagen al tamaño de la sección */
-    background-position: center;
-    /* Centra la imagen horizontal y verticalmente */
-    position: relative;
-    /* Establece el contexto de posicionamiento */
-}
-
 .seccion1 {
+    width: 75.5%;
     background-color: #502110;
-    width: 1440px;
     position: relative;
     /* Establece el contexto de posicionamiento */
-    height: 799px;
+    height: 780px;
     /* Altura del contenedor */
 }
 
+.secciong {
+    width: 75.5%;
+    position: relative;
+}
 
+.seccionFlex2 {
+    display: flex;
+    height: 492px;
+}
 
+.seccionFlex3 {
+    display: flex;
+    height: 480px;
+}
+
+.seccionFlex4 {
+    display: flex;
+    height: 600px;
+    background-color: #7F2E3B;
+    margin-bottom: 60px;
+}
+
+.h1s4{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 33px;
+    font-weight: bold;
+    color: white;
+    padding-top: 40px;
+    position: absolute;
+    top: 120px;
+    left: 440px;
+    z-index: 1;
+    width: 450px;
+    text-align: left;
+}
+
+.ps4{
+    position: absolute;
+    font-size: small;
+    color: white;
+    top: 390px;
+    left: 600px;
+    z-index: 2;
+    width: 280px;
+    text-align: left;
+}
+
+.btns4{
+    margin-top: 20px;
+    padding: 10px 20px;
+}
+
+.btns4:hover{
+    background-color: pink;
+}
+
+.imgRosada{
+    width:"700px";
+}
 
 .img-page {
     position: absolute;
     /* Posiciona las imágenes de forma absoluta */
-    top: 0;
+    top: 0px;
     /* Posición desde la parte superior */
-    left: 0;
+    left: 0px;
     /* Posición desde la parte izquierda */
     z-index: 1;
     /* Capa más baja */
 }
 
-.img-bolso {
-    position: absolute;
-    /* Posiciona las imágenes de forma absoluta */
-    top: 50px;
-    /* Posición desde la parte superior */
-    left: 250px;
-    /* Posición desde la parte izquierda */
-    z-index: 2;
-    /* Capa intermedia */
-}
-
 .img-tittle {
     position: absolute;
     /* Posiciona las imágenes de forma absoluta */
-    top: 350px;
+    top: 300px;
     /* Posición desde la parte superior */
-    left: 430px;
+    left: 185px;
+    /* Posición desde la parte izquierda */
+    z-index: 2;
+    /* Capa más alta */
+}
+
+.img-bolso {
+    position: absolute;
+    /* Posiciona las imágenes de forma absoluta */
+    top: 0px;
+    /* Posición desde la parte superior */
+    left: 0px;
     /* Posición desde la parte izquierda */
     z-index: 3;
-    /* Capa más alta */
+    /* Capa intermedia */
 }
 
 .texto {
     position: absolute;
     /* Posiciona las imágenes de forma absoluta */
-    top: 460px;
+    top: 420px;
     /* Posición desde la parte superior */
-    left: 470px;
+    left: 190px;
     /* Posición desde la parte izquierda */
     z-index: 4;
     /* Capa más alta */
     color: white;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 1.6;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
 }
 
 .boton {
     position: absolute;
     /* Posiciona las imágenes de forma absoluta */
-    top: 580px;
+    top: 530px;
     /* Posición desde la parte superior */
-    left: 660px;
+    left: 410px;
     /* Posición desde la parte izquierda */
     z-index: 5;
     /* Capa más alta */
@@ -165,7 +210,12 @@ nav ul li a:hover {
     height: 48px;
 }
 
+.boton:hover {
+    background-color: bisque;
+}
+
 .pieSeccion {
+    width: 72%;
     display: flex;
     justify-content: space-between;
     background-color: #502110;
@@ -184,6 +234,9 @@ nav ul li a:hover {
 
 
 .footer_div {
+    width: 59%;
+    text-align: center; 
+    margin-left: 20%;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -207,5 +260,81 @@ nav ul li a:hover {
     background-color: #f0f0f0;
     display: flex;
     justify-content: space-between;
-
+    width: 59%;
+    text-align: center; 
+    margin-left: 20%;
 }
+
+/* página blog.html */
+
+.headerBlog{
+    padding-left: 24%;
+    text-align: left; 
+    padding-top: 5%;
+}
+.mainBlogBag{
+    text-align: center; 
+    padding-left: 23%;
+}
+.tarjeta{
+    border: 1px solid gray; 
+    width: 40%; 
+    padding: 10px;
+    margin: 20px;
+    text-align: left; 
+}
+.seccionTarjetas{
+    display:flex; 
+    justify-content: space-around; 
+    width: 70%;
+}
+.textoTarjetas{
+    color: gray;
+}
+.headVarios{
+    display:flex; 
+    justify-content: space-between;
+    width: 68%;
+    align-items: center;
+}
+.logMin{
+    width: 22px;
+    height: 22px;
+}
+
+/* página bags.html*/
+
+.headerBags{
+    text-align: center; 
+    padding-top: 5%;
+}
+.headVarBags{
+    display:flex; 
+    justify-content: center;
+    align-items: center;
+}
+.ajCarrusel{
+    padding-bottom: 125px;
+}
+
+/* página accesories.html*/
+
+.headerAccesorios{
+    text-align: left; 
+    padding-left: 20%;
+}
+.mainAccesorios{
+    text-align: center; 
+    padding-left: 19%;
+}
+.tarjAccesorio{
+    padding:8px; 
+    margin: 9px;
+}
+.headVarAcc{
+    display:flex; 
+    justify-content: left;
+    align-items: center;
+}
+
+
