--- a/styles.css
+++ b/styles.css
@@ -420,3 +420,96 @@ nav ul li a:hover {
     float: left;
 
 }
+
+/* Formulario */
+
+.formulario {
+    font-family: Arial, sans-serif;
+    margin-bottom: 100px;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150vh;
+    width: 138vh;
+}
+
+form {
+    background-color: #ffffff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    width: 400px;
+}
+
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #333333;
+}
+
+.labelf {
+    display: block;
+    margin-bottom: 5px;
+    color: #555555;
+}
+
+input[type="text"],
+input[type="number"],
+input[type="email"],
+input[type="tel"],
+input[type="date"],
+
+.buttonf {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #c01010;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+.buttonf {
+    background-color: #4CAF50;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.buttonf:hover {
+    background-color: #45a049;
+}
+
+@media screen and (max-width: 480px) {
+    form {
+        width: 90%;
+    }
+}
+
+.tituloforms {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+}
+
+/* Mapa */
+
+.map-container {
+    margin-top: 50px;
+    width: 400px;
+    height: 400px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Estilo para el iframe del mapa */
+iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    align-items: center;
+    justify-content: center;
+}
