--- a/styles.css
+++ b/styles.css
@@ -425,21 +425,23 @@ nav ul li a:hover {
 
 .formulario {
     font-family: Arial, sans-serif;
-    margin-bottom: 100px;
+    margin-bottom: 10px;
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 150vh;
     width: 138vh;
+
 }
 
 form {
-    background-color: #ffffff;
+
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
     width: 400px;
+    background-color: #502110;
 }
 
 h2 {
@@ -451,7 +453,7 @@ h2 {
 .labelf {
     display: block;
     margin-bottom: 5px;
-    color: #555555;
+    color: #ffffff;
 }
 
 input[type="text"],
@@ -464,20 +466,20 @@ input[type="date"],
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
-    border: 1px solid #c01010;
+    border: 1px solid #000000be;
     border-radius: 5px;
     box-sizing: border-box;
 }
 
 .buttonf {
-    background-color: #4CAF50;
-    color: white;
+    background-color: white;
+    color: #000000;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 .buttonf:hover {
-    background-color: #45a049;
+    background-color: #f56530;
 }
 
 @media screen and (max-width: 480px) {
@@ -487,22 +489,46 @@ input[type="date"],
 }
 
 .tituloforms {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    text-align: center;
-    justify-content: center;
     display: flex;
+    justify-content: center;
+    /* Centrar horizontalmente */
+    align-items: center;
+    /* Centrar verticalmente */
+    height: 20vh;
+    width: 135vh;
+    /* Altura del contenedor (ajusta según necesidad) */
+
+}
+
+
+.divtituloforms {
+    font-size: 2rem;
+    /* Tamaño de fuente del h1 */
+    color: #333;
 }
 
 /* Mapa */
 
+
+.map2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 800px;
+    height: 200%;
+
+}
+
+
 .map-container {
+    display: flex;
     margin-top: 50px;
-    width: 400px;
+    width: 380px;
     height: 400px;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 30px;
 }
 
 /* Estilo para el iframe del mapa */
@@ -510,6 +536,5 @@ iframe {
     width: 100%;
     height: 100%;
     border: none;
-    align-items: center;
-    justify-content: center;
+
 }
