--- a/styles.css
+++ b/styles.css
@@ -303,7 +303,7 @@ nav ul li a:hover {
     width: 59%;
     text-align: center;
     margin-left: 20%;
-    margin-top: 10%;
+    margin-top: 2%;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -311,6 +311,11 @@ nav ul li a:hover {
     /* Añade espacio alrededor del footer */
     background-color: #ffffff;
     /* Cambia el color de fondo del footer si es necesario */
+}
+
+hr {
+    width: 70%;
+    margin-left: 15%;
 }
 
 .izquierda {
@@ -328,6 +333,22 @@ nav ul li a:hover {
     justify-content: space-between;
 }
 
+.links {
+    margin: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    line-height: 20px;
+}
+
+.links ul li a{
+    text-decoration: none;
+    color: #000000;
+}
+
+.links ul li b{
+    font-weight: bold;
+}
+
 .abajo {
     background-color: #ffffff;
     display: flex;
@@ -335,6 +356,7 @@ nav ul li a:hover {
     width: 62%;
     text-align: center;
     margin-left: 20%;
+    align-items: center;
 }
 
 .footer__social {
@@ -361,7 +383,6 @@ nav ul li a:hover {
 .footer__img {
     width: 30px;
 }
-
 
 /* página blog.html */
 
@@ -432,7 +453,11 @@ nav ul li a:hover {
 
 .mainAccesorios {
     text-align: center;
-    padding-left: 19%;
+    padding-left: 18%;
+}
+
+.vidYT{
+    padding-left: 25px;
 }
 
 .tarjAccesorio {
@@ -516,8 +541,12 @@ nav ul li a:hover {
     width: 110px;
     height: 40px;
     float: left;
-
 }
+
+.button-s3:hover {
+    background-color: #502110;
+}
+    
 
 /* Formulario */
 
@@ -525,12 +554,10 @@ nav ul li a:hover {
     font-family: Arial, sans-serif;
     margin-bottom: 10px;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 150vh;
+    height: 105vh;
     width: 138vh;
-
+    text-align: center;
+    padding-left: 19%;
 }
 
 form {
@@ -593,13 +620,8 @@ h2 {
     align-items: center;
     /* Centrar verticalmente */
     height: 20vh;
-    width: 135vh;
+    width: 105vh;
     /* Altura del contenedor (ajusta según necesidad) */
-
-}
-
-
-.divtituloforms {
     font-size: 2rem;
     /* Tamaño de fuente del h1 */
     color: #333;
@@ -607,21 +629,20 @@ h2 {
 
 /* Mapa */
 
-
 .map2 {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    width: 800px;
-    height: 200%;
-
+    width: 73%;
+    height: 150%;
+    padding-left: 0px;
 }
 
 
 .map-container {
-    display: flex;
+    
     margin-top: 50px;
-    width: 380px;
+    width: 45%;
     height: 400px;
     border-radius: 10px;
     overflow: hidden;
