--- a/routes/public/css/styles.css
+++ b/routes/public/css/styles.css
@@ -552,7 +552,7 @@ hr {
 
 .formulario {
     font-family: Arial, sans-serif;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     padding: 0;
     height: 105vh;
     width: 138vh;
@@ -560,10 +560,10 @@ hr {
     padding-left: 19%;
 }
 
-form {
+formContacto {
 
-    padding: 30px;
-    border-radius: 10px;
+    padding: 0px;
+    border-radius: 0px;
     box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
     width: 400px;
     background-color: #502110;
@@ -657,3 +657,4 @@ iframe {
     border: none;
 
 }
+
